testsuite/tests/ghc-regress/typecheck/should_fail/tcfail200.hs
{-# LANGUAGE MagicHash #-}

module ShouldFail where

f = let x = ( 1#, 'c' ) in x
